<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/saved_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/content_description"
            android:padding="5dp"
            android:src="@drawable/nyt"/>

        <TextView
            android:id="@+id/title_saves_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/saved_image"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/person_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_saves_tv"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/saved_image"
            android:drawablePadding="2dp"
            android:text="@string/author"/>

        <TextView
            android:id="@+id/section_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_name"
            android:textColor="@color/sectionColor"
            android:layout_below="@id/person_tv"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/saved_image"
            android:drawablePadding="2dp"/>

        <ImageView
            android:id="@+id/remove_from_saves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/section_tv"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/baseline_bookmark_remove_24"
            tools:ignore="ContentDescription"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>